Implementação da criação da compra

--- a/src/Everton.123Vendas.Infrastructure.IoC/Everton.123Vendas.Infrastructure.IoC.csproj
+++ b/src/Everton.123Vendas.Infrastructure.IoC/Everton.123Vendas.Infrastructure.IoC.csproj
@@ -4,7 +4,18 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Everton._123Vendas.Infrastructure.IoC</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Everton.123Vendas.Domain\Everton.123Vendas.Domain.csproj" />
+    <ProjectReference Include="..\Everton.123Vendas.Infrastructure.Data\Everton.123Vendas.Infrastructure.Data.csproj" />
+    <ProjectReference Include="..\Everton.123Vendas.Infrastructure.Events\Everton.123Vendas.Infrastructure.Events.csproj" />
+  </ItemGroup>
 
 </Project>
